...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send message to?"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/pin_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Name"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:cursorVisible="false"
            android:singleLine="true" />

        <TextView
            android:id="@+id/pin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="Confirm"
            android:textAppearance="?android:attr/textAppearanceMedium"
...
